# hotfix

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  compile_errors  publish.sh
.github/workflows/: release.yml  test.yml
crates/hotfix/: Cargo.toml
crates/hotfix-codegen/: Cargo.toml  README.md
crates/hotfix-codegen/src/: lib.rs
crates/hotfix-derive/: Cargo.toml  README.md
crates/hotfix-derive/src/: derive_fix_value.rs  lib.rs
crates/hotfix-dictionary/: Cargo.toml  README.md
crates/hotfix-dictionary/src/: lib.rs  quickfix.rs
crates/hotfix-dictionary/src/resources/fast/templates/: example.xml  smallest_value.xml  unittest_mandatory.xml  unittest_optional.xml
crates/hotfix-dictionary/src/resources/quickfix/: FIX-4.0.xml  FIX-4.1.xml  FIX-4.3.xml  FIX-5.0-SP1.xml  FIX-5.0-SP2.xml
crates/hotfix-dictionary/src/resources/repositories/FIXRepository_FIX.5.0SP2_EP254/: Readme.html
crates/hotfix-dictionary/src/resources/repositories/FIXRepository_FIX.5.0SP2_EP254/Basic/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
crates/hotfix-dictionary/src/resources/repositories/FIXRepository_FIX.5.0SP2_EP254/Basic/2016/: dc.xsd  dcmitype.xsd  dcterms.xsd  repositorytypes2016.xsd
crates/hotfix-dictionary/src/resources/repositories/FIXRepository_FIX.5.0SP2_EP254/Unified/: FIX.5.0SP2_EP254_en_phrases.xml
crates/hotfix-dictionary/src/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.0/Base/: Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml
crates/hotfix-dictionary/src/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.1/Base/: Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml
crates/hotfix-dictionary/src/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.2/Base/: Components.xml  Datatypes.xml  Enums.xml  Messages.xml  MsgContents.xml
crates/hotfix-dictionary/src/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.3/Base/: Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml
crates/hotfix-dictionary/src/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.4/Base/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
crates/hotfix-dictionary/src/resources/repositories/fix_repository_2010_edition_20140507/Unified/: FIX.4.0_en_phrases.xml  FIX.4.1_en_phrases.xml  FIX.4.2_en_phrases.xml  FIX.4.3_en_phrases.xml  FIX.4.4_en_phrases.xml  FIX.5.0SP1_en_phrases.xml  FIX.5.0SP2_en_phrases.xml  FIX.5.0_en_phrases.xml  FIXRepositoryMetadata.xml  FIXT.1.1_en_phrases.xml
crates/hotfix-dictionary/src/resources/repositories/fix_repository_2010_edition_20140507/schema/: Abbreviations.xsd  Categories.xsd  Components.xsd  Datatypes.xsd  Enums.xsd  Fields.xsd  Messages.xsd  MsgContents.xsd  Sections.xsd  extensionpack.xsd  repositorystructures.xsd  repositorytypes.xsd  versions.xsd
crates/hotfix-dictionary/src/resources/repositories/fix_repository_2010_edition_20140507/xsl/: Translate_Abbreviations_2010_to_2009.xsl  Translate_Categories_2010_to_2009.xsl  Translate_Components_2010_to_2009.xsl  Translate_Datatypes_2010_to_2009.xsl  Translate_Enums_2010_to_2009.xsl  Translate_Fields_2010_to_2009.xsl  Translate_Messages_2010_to_2009.xsl  Translate_MsgContents_2010_to_2009.xsl  Translate_Sections_2010_to_2009.xsl  Translate_support.xsl
crates/hotfix-dictionary/src/resources/tagvalue/: 0001.txt
crates/hotfix-dictionary/src/test_data/quickfix_specs/: missing_components.xml  missing_fields.xml  missing_header.xml  missing_messages.xml  missing_trailer.xml  no_content.xml  root_has_no_type_attr.xml  root_has_no_version_attrs.xml  root_is_not_fix.xml
crates/hotfix-encoding/: Cargo.toml  README.md  build.rs
crates/hotfix-encoding/src/: config.rs  decoder.rs  definitions.rs  encoder.rs  error.rs  field_access.rs  field_types.rs  lib.rs  raw_decoder.rs  streaming_decoder.rs  utils.rs
crates/hotfix-encoding/src/field_types/: checksum.rs  date.rs  monthyear.rs  multiple_chars.rs  multiple_strings.rs  tagu32.rs  time.rs  tz.rs  tz_time.rs
crates/hotfix-message/: Cargo.toml
crates/hotfix-message/src/: encoder.rs  encoding.rs  field_map.rs  lib.rs  message.rs  parser.rs  parts.rs
crates/hotfix-message/src/encoding/: buffer.rs  definitions.rs  field_access.rs  field_types.rs
crates/hotfix-message/src/encoding/field_types/: checksum.rs  date.rs  monthyear.rs  multiple_chars.rs  multiple_strings.rs  primitives.rs  tagu32.rs  time.rs  timestamp.rs  tz.rs  tz_time.rs  tz_timestamp.rs
crates/hotfix-message/src/parts/: body.rs  header.rs  repeating_group.rs  trailer.rs
crates/hotfix/src/: actors.rs  initiator.rs  lib.rs  message.rs  message_utils.rs  session.rs
crates/hotfix/src/actors/: socket_reader.rs
crates/hotfix/src/message/: heartbeat.rs  logon.rs  parser.rs  sequence_reset.rs
crates/hotfix/src/session/: state.rs
crates/hotfix/src/store/: in_memory.rs  redb.rs
crates/hotfix/src/transport/: tls.rs
examples/simple-new-order/: Cargo.toml  README.md
examples/simple-new-order/config/: test-config.toml
examples/simple-new-order/src/: application.rs  main.rs  messages.rs
hotfix/: Cargo.toml
hotfix/hotfix-core/: Cargo.toml
hotfix/hotfix-core/src/: config.rs  lib.rs  message.rs  session.rs  tls_client.rs
hotfix/hotfix-core/src/actors/: orchestrator.rs
hotfix/hotfix-core/src/message/: heartbeat.rs  logon.rs  parser.rs
hotfix/src/: actors.rs  application.rs  config.rs  initiator.rs  lib.rs  message.rs  session.rs  store.rs  transport.rs
hotfix/src/actors/: application.rs  orchestrator.rs  session.rs  socket_reader.rs  socket_writer.rs
hotfix/src/message/: common.rs  hardcoded.rs  heartbeat.rs  logon.rs  parser.rs
hotfix/src/session/: message.rs  state.rs
hotfix/src/store/: in_memory.rs  redb.rs
hotfix/src/transport/: connection.rs  tcp.rs  tls.rs
(+36 files in other folders)
