[package]
name = "hotfix-codegen"
description = "Code generation for HotFIX."
readme = "./README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = "0.4"
hotfix-dictionary = { version = "0.0.13", path = "../hotfix-dictionary" }
fnv = "1"
heck = "0.4"
indoc = "2"
strum = "0.24"
strum_macros = "0.25"

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
criterion = { version = "0.3", features = ["html_reports"] }
enum-as-inner = "0.6"
hotfix-dictionary = { version = "0.0.13", path = "../hotfix-dictionary", features = ["fix40", "fix41", "fix42", "fix43", "fix50"] }
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
tokio = { version = "1", features = ["full"] }
syn = { version = "1", features = ["parsing"] }
