[package]
name = "hotfix-derive"
description = "Derive macros for HotFIX."
readme = "./README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "hotfix_derive"
proc-macro = true

[dependencies]
darling = "0.12"
proc-macro-crate = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["derive", "parsing"] }
