[package]
name = "hotfix-encoding"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Message encoding for hotfix, an experimental FIX engine"
keywords = []

[dependencies]
nohash-hasher = "^0.2"
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
