[package]
name = "hotfix-encoding"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Message encoding for hotfix, an experimental FIX engine"
keywords = []

[dependencies]
chrono = "0.4"
hotfix-dictionary = { version = "0.0.9", path = "../hotfix-dictionary" }
nohash-hasher = "^0.2"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
