[package]
name = "hotfix-message"
description = "FIX messages for HotFIX."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
fix42 = ["hotfix-dictionary/fix42"]

[dependencies]
chrono = "0.4"
hotfix-derive = { version = "0.0.12", path = "../hotfix-derive" }
hotfix-dictionary = { version = "0.0.12", path = "../hotfix-dictionary" }
nohash-hasher = "^0.2"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hotfix-dictionary = { version = "0.0.12", path = "../hotfix-dictionary", features = ["fix42"] }
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"

[build-dependencies]
chrono = "0.4"
hotfix-codegen = { version = "0.0.12", path = "../hotfix-codegen" }
hotfix-dictionary = { version = "0.0.12", path = "../hotfix-dictionary", features = ["fix42"] }
fnv = "1"
heck = "0.4"
indoc = "2"
lazy_static = "1"
quick-xml = "0.29"
roxmltree = "0.14"
rayon = "1"
strum = "0.24"
strum_macros = "0.25"
