[package]
name = "hotfix"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "An experimental FIX engine"
keywords = []

[features]
redb = ["dep:redb"]

[dependencies]
async-trait = "^0.1.73"
futures = "^0.3.28"
hotfix-encoding = { version = "0.0.9", path = "../hotfix-encoding" }
pki-types = { package = "rustls-pki-types", version = "^0.2" }
redb = { version = "^1.1.0", optional = true }
rustls = "^0.21.5"
rustls-pemfile = "=2.0.0-alpha.1"
serde = { version = "^1.0.177", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
tokio-rustls = "^0.24.1"
tokio-stream = "^0.1.14"
toml = "^0.7.6"
tracing = "^0.1.37"
