[package]
name = "simple-new-order"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.4", features = ["derive"] }
hotfix = { path = "../../crates/hotfix", features = ["redb"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
